[gd_scene load_steps=11 format=2]

[ext_resource path="res://enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Exhaust.tscn" type="PackedScene" id=2]
[ext_resource path="res://img/Muzzleflash.png" type="Texture" id=3]
[ext_resource path="res://img/CrabShip.png" type="Texture" id=4]
[ext_resource path="res://audio/Crablaser.wav" type="AudioStream" id=5]
[ext_resource path="res://enemies/Crabship/CrabShip.gd" type="Script" id=6]

[sub_resource type="Shader" id=3]
code = "/*
Shader from Godot Shaders - the free shader library.
godotshaders.com/shader/energy-beams

This shader is under CC0 license. Feel free to use, improve and 
change this shader according to your needs and consider sharing 
the modified result to godotshaders.com.
*/

shader_type canvas_item;
render_mode blend_add; // Remove this if you want to use HDR glow instead (use \"Glow\" and \"Outline Glow\" sliders)

uniform int beams = 2; // How many beams the energy field should have

uniform float energy = 3.0; // How much the beams will travel up and down
uniform int roughness : hint_range(1, 10) = 3; // How compact the noise texture will be
uniform int frequency = 10; // Amount of \"ripples\" in the beams

uniform float speed = 1.0; // Animation speed
uniform float thickness : hint_range(0.0, 0.1) = 0.006; // Thickness of the main beam
uniform float outline_thickness : hint_range(0.0, 0.1) = 0.03; //Thickness of the outline color
uniform float beam_difference : hint_range(0.0, 1.0) = 0.0; // The thickness difference between the main beam and the other, if there are more than one beam. The closer to 1 the smaller the thickness difference.

uniform float glow : hint_range(0.0, 3.0) = 0.0; // Use together with WorldEnvironment's Glow feature
uniform float outline_glow : hint_range(0.0, 3.0) = 0.0;

uniform vec4 color : hint_color = vec4(0.91, 1.0, 1.0, 1.0);
uniform vec4 outline_color : hint_color = vec4(0.5, 1.0, 0.96, 1.0);

uniform float progress : hint_range(0.0, 1.0) = 1.0;

uniform float y_offset : hint_range (-0.5, 0.5) = 0.0; // Position of the beam
uniform float fixed_edge_size : hint_range(0.0, 0.5) = 0.05; // How close to the edge should the beam be still before the animatino starts
uniform vec2 noise_scale = vec2(1.0); // If the object (for example the ColorRect or Sprite node) is compressed use this to compensate for the noise texture being compressed.

float random(vec2 uv) {
    return fract(sin(dot(uv.xy,
        vec2(12.9898,78.233))) *
            43758.5453123);
}

float noise(vec2 uv) {
    vec2 uv_index = floor(uv);
    vec2 uv_fract = fract(uv);

    // Four corners in 2D of a tile
    float a = random(uv_index);
    float b = random(uv_index + vec2(1.0, 0.0));
    float c = random(uv_index + vec2(0.0, 1.0));
    float d = random(uv_index + vec2(1.0, 1.0));

    vec2 blur = smoothstep(0.0, 1.0, uv_fract);

    return mix(a, b, blur.x) +
            (c - a) * blur.y * (1.0 - blur.x) +
            (d - b) * blur.x * blur.y;
}

float fbm(vec2 uv, float time) {
    int octaves = roughness;
    float amp = 0.01 * energy * progress;
    float freq = float(frequency);
	float value = 0.0;
	
    for(int i = 0; i < octaves; i++) {
        value += amp * noise(freq * vec2(uv.x, uv.y + time));
        amp *= 0.5;
        freq *= 2.0;
    }
    return value;
}

vec4 difference(vec4 base, vec4 blend){
	return abs(base - blend);
}

vec4 bolt(vec2 uv, float time, float i)
{
	// Setup the beam locking to the edges.
	float falloff = smoothstep(0.0, fixed_edge_size, uv.x) * smoothstep(0.0, fixed_edge_size, 1.0 - uv.x);
	
	// Use Fractal Brownian Motion to create a \"cloud texture\" and use Difference blend mode to make the beam
	vec4 clouds = vec4(fbm((uv + vec2(i) ) * noise_scale, time * speed)) * falloff;
	vec4 diff_clouds = difference(clouds, vec4(uv.y - 0.5 + y_offset + (uv.y * falloff * 0.02 * energy * progress)));
	
	// Create a new noise to mask the beams on low \"progress\" values. To make a \"turn-off\" effect more visually interesting.
	vec4 clouds2 = vec4(fbm((uv * 2.0) * noise_scale, time * 1.)) * 5.0;
	diff_clouds += smoothstep(0.0, 0.8, clouds2) * 0.1 * (1.-progress);
	
	// Set thickness of the beams. First beam is the Thickness size and all following beams are sized with beam_difference
	float thickness2 =  1. - ( thickness / (min(i + beam_difference, 1.0) + (1.0-beam_difference))) * progress ;
	vec4 beam = clamp(smoothstep(thickness2, thickness2 + 0.005 * progress, 1.0 - diff_clouds), vec4(0.0), vec4(1.0));
	
	//Set the beam outlines
	vec4 beam_outline;
	float outline = thickness2 - (outline_thickness * progress);
	beam_outline = clamp(smoothstep(outline, outline + 0.04, 1.0 - diff_clouds), 0.0, 1.0);
	beam_outline = clamp(beam_outline - beam, 0.0, 1.0);
	
	// Merge the beam and the outline and return to the fragment function
	return (beam * (color + vec4(glow, glow, glow, 0.))) + (beam_outline * (outline_color + vec4(outline_glow, outline_glow, outline_glow, 0.)));
}

void fragment()
{	
	vec4 beam = vec4(0.0);
	
	for (int i = 0; i < beams; i++){
		beam = max(beam, bolt(UV, TIME, float(i)));
	}
	
	COLOR = beam;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/beams = 8
shader_param/energy = 50.0
shader_param/roughness = 3
shader_param/frequency = 10
shader_param/speed = 1.0
shader_param/thickness = 0.006
shader_param/outline_thickness = 0.03
shader_param/beam_difference = 1.0
shader_param/glow = 1.5
shader_param/outline_glow = 0.6
shader_param/color = Color( 1, 0.588235, 0, 1 )
shader_param/outline_color = Color( 1, 0, 0, 1 )
shader_param/progress = 1.0
shader_param/y_offset = 0.0
shader_param/fixed_edge_size = 0.05
shader_param/noise_scale = Vector2( 1, 1 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 1e-05, 1e-05 ) ]
}

[node name="Crabship" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="Audio" type="AudioStreamPlayer" parent="." index="0"]
stream = ExtResource( 5 )
volume_db = -0.5
bus = "SFX"

[node name="Exhaust" parent="." index="1" instance=ExtResource( 2 )]
show_behind_parent = true
position = Vector2( 0, -16 )
scale = Vector2( 0.8, -1 )

[node name="Sprite" parent="." index="2"]
texture = ExtResource( 4 )

[node name="VisibilityNotifier" parent="Sprite" index="0"]
visible = false

[node name="Hurtbox" parent="Sprite" index="1"]
visible = false

[node name="CP" type="CollisionPolygon2D" parent="Sprite/Hurtbox" index="0"]
polygon = PoolVector2Array( -24, 1, -22, -1, -16, -1, -16, -14, -8, -16, -6, -24, 6, -24, 8, -16, 16, -14, 16, -1, 22, -1, 24, 1, 24, 6, 22, 12, 13, 24, 7, 24, 7, 12, -7, 12, -7, 24, -13, 24, -22, 12, -24, 6 )

[node name="Hitbox" parent="Sprite" index="2"]
visible = false

[node name="CP" type="CollisionPolygon2D" parent="Sprite/Hitbox" index="0"]
polygon = PoolVector2Array( -24, 1, -22, -1, -16, -1, -16, -14, -8, -16, -6, -24, 6, -24, 8, -16, 16, -14, 16, -1, 22, -1, 24, 1, 24, 6, 22, 12, 13, 24, 7, 24, 7, 12, -7, 12, -7, 24, -13, 24, -22, 12, -24, 6 )

[node name="CR" type="ColorRect" parent="." index="3"]
show_behind_parent = true
material = SubResource( 4 )
margin_left = -10.0
margin_top = 13.0
margin_right = 10.0
margin_bottom = 26.0

[node name="PositionMuzzle" parent="." index="4"]
position = Vector2( 0, 19 )

[node name="Sprite" type="Sprite" parent="PositionMuzzle" index="0"]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )

[node name="AnimMuzzle" type="AnimationPlayer" parent="PositionMuzzle" index="1"]
anims/RESET = SubResource( 1 )
anims/attack = SubResource( 2 )

[node name="Direction" type="RayCast2D" parent="PositionMuzzle" index="2"]
position = Vector2( -1, 0 )
cast_to = Vector2( 12, 0 )

[node name="AttackTimer" type="Timer" parent="." index="6"]
autostart = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
